Select state dropdown responsiveness issue fixed, scrollbar hided for better viewing experience

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+:root::-webkit-scrollbar {
+  scrollbar-width: none; 
+}
+
 html {
   overflow-x: hidden;
 }
